--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/isinicolle/npm-isinicolle/issues"
   },
-  "homepage": "https://github.com/isinicolle/npm-isinicolle#readme"
+  "homepage": "https://github.com/isinicolle/npm-isinicolle#readme",
+  "dependencies": {
+    "moment": "^2.29.4"
+  }
 }
