--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/isinicolle/npm-isinicolle#readme",
   "dependencies": {
+    "json-server": "^0.15.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
