--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Nuevo Curso de NPM: Gestión de Paquetes y Dependencias en JavaScript Nuevo Curso de NPM: Gestión de Paquetes y Dependencias en JavaScrip",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "iniciar": "node src/index.js",
+    "node": "node src/index.js"
   },
   "repository": {
     "type": "git",
