--- a/package.json
+++ b/package.json
@@ -28,10 +28,7 @@
   },
   "dependencies": {
     "g": "^2.0.1",
-    "json-server": "^0.17.0",
-    "moment": "^2.29.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "moment": "^2.29.4"
   },
   "preferGlobal": true,
   "devDependencies": {
